<resources>
    <string name="app_name">Location reminders</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_reminder_detail_fragment">Hello reminder detail fragment</string>
    <string name="add_reminder_fab_description">создать новое напоминание</string>
    <string name="content_desc_save_reminder">сохранить напоминание</string>
    <string name="title_hint_text_input">Название</string>
    <string name="description_hint_text_input">Описание</string>
    <string name="select_radius_text_view">Выберите радиус метки:</string>
    <string name="radius_content_desc_slider">установить радиус метки</string>
    <string name="select_location_text_button">Выбрать локацию</string>
    <string name="location_text_view">Название локации</string>

    <string name="reminder_list_label">Список напоминаний</string>
    <string name="reminder_detail_label">Подробно о напоминании</string>
    <string name="add_reminder_label">Новое напоминание</string>
    <string name="select_location_label">Выбор локации</string>

    <string name="user_location_content_desc_fab">поиск местоположения пользователя</string>
    <string name="select_location_content_desc_fab">сохранить выбранную локацию</string>

    <string name="dialog_negative_button">Нет, спасибо</string>
    <string name="dialog_positive_button">Принять</string>
    <string name="rationale_dialog_title_user_location">Запрос разрешения на местоположение</string>
    <string name="rationale_dialog_description_user_location">Приложению необходимо знать ваше точное местоположение</string>
</resources>