<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/reminderListFragment">

    <fragment
        android:id="@+id/reminderListFragment"
        android:name="com.slowerror.locationreminders.presentation.ui.reminder_list.ReminderListFragment"
        android:label="@string/reminder_list_label"
        tools:layout="@layout/fragment_reminder_list" >
        <action
            android:id="@+id/action_reminderListFragment_to_addReminderFragment"
            app:destination="@id/addReminderNavGraph" />
        <action
            android:id="@+id/action_reminderListFragment_to_reminderDetailFragment"
            app:destination="@id/reminderDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/reminderDetailFragment"
        android:name="com.slowerror.locationreminders.presentation.ui.reminder_detail.ReminderDetailFragment"
        android:label="@string/reminder_detail_label"
        tools:layout="@layout/fragment_reminder_detail" />

    <navigation
        android:id="@+id/addReminderNavGraph"
        app:startDestination="@id/addReminderFragment">
        <fragment
            android:id="@+id/addReminderFragment"
            android:name="com.slowerror.locationreminders.presentation.ui.add_reminder.AddReminderFragment"
            android:label="@string/add_reminder_label"
            tools:layout="@layout/fragment_add_reminder">
            <action
                android:id="@+id/action_addReminderFragment_to_selectLocationFragment"
                app:destination="@id/selectLocationFragment" />
        </fragment>
        <fragment
            android:id="@+id/selectLocationFragment"
            android:name="com.slowerror.locationreminders.presentation.ui.select_location.SelectLocationFragment"
            android:label="@string/select_location_label"
            tools:layout="@layout/fragment_select_location" />
    </navigation>
</navigation>