<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".presentation.ui.add_reminder.AddReminderFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_12">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/title_hint_text_input"
            android:minWidth="88dp"
            android:maxWidth="488dp"
            app:counterEnabled="true"
            app:counterMaxLength="40"
            android:layout_marginBottom="@dimen/dimen_12"
            app:layout_constraintBottom_toTopOf="@id/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:maxLength="40" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_12"
            android:hint="@string/description_hint_text_input"
            android:maxWidth="488dp"
            android:minWidth="88dp"
            app:layout_constraintBottom_toTopOf="@id/radiusTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:lines="4" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/radiusTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingBottom="@dimen/dimen_12"
            android:text="@string/select_radius_text_view"
            android:textSize="@dimen/default_item_title_text_size"
            app:layout_constraintBottom_toTopOf="@id/radiusSlider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description" />

        <com.google.android.material.slider.Slider
            android:id="@+id/radiusSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_12"
            android:contentDescription="@string/radius_content_desc_slider"
            android:stepSize="100"
            android:valueFrom="100"
            android:valueTo="1000"
            app:layout_constraintBottom_toTopOf="@id/locationTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radiusTextView" />

        <Button
            android:id="@+id/selectLocationButton"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="56dp"
            android:text="@string/select_location_text_button"
            app:icon="@drawable/ic_location_on_24"
            app:layout_constraintBottom_toBottomOf="@id/locationTextView"
            app:layout_constraintEnd_toStartOf="@id/locationTextView"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/locationTextView" />

        <TextView
            android:id="@+id/locationTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="start|center_vertical"
            android:maxLines="2"
            android:padding="@dimen/dimen_8"
            android:text="@string/location_text_view"
            android:textSize="@dimen/subtitle_card_view_size"
            app:layout_constraintBottom_toTopOf="@id/saveFab"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/selectLocationButton"
            app:layout_constraintTop_toBottomOf="@id/radiusSlider" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/saveFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_12"
            android:contentDescription="@string/content_desc_save_reminder"
            android:src="@drawable/ic_save_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
